Changelog for HTML-Tree

NEXT RELEASE
    [FIXES]
    * Updated HTML::Parser requirement to 3.46 to fix a bug in
      tag-rendering.t, noted in RT 20816 and 19796.  Thanks to 
      Gordon Lack and Ricardo Signes
    * Fixed HTML::TreeBuilder to not remove &nbsp; where it shouldn't,
      using patch supplied in RT 17481.  Thanks to Chris Madsen.

3.20    Sun Jun  4 22:24:38 CDT 2006
    No code changes.  Just making sure all notes go to Andy Lester,
    not Sean Burke.

3.19_04 Wed Feb  1 09:57:35 PST 2006
    [FIXES]
    * Modified starttag() so that it could render a literal HTML::Element
      correctly. Added a test case for this in tag-rendering.t
      Thanks to Terrence Brannon.


3.19_03 Fri Nov 25 22:20:51 CST 2005
    [THINGS THAT MAY BREAK YOUR CODE]
    * The store_declarations() method has been restored, but defaults
      to true instead of false.


3.19_02 Thu Nov 24 22:51:40 CST 2005

    [THINGS THAT MAY BREAK YOUR CODE]
    * The store_declarations() method has been removed.
    * Non-closing HTML tags like <IMG> are now rendered as <IMG />.
    * All values in tags are now double-quoted.  Previously, all-numeric
      values weren't quoted.

    [FIXES]
    * The DOCTYPE declaration now always gets put back at the top of
      the recreated document.  Thanks, Terrence Brannon.
    * Non-closing HTML tags like <IMG> are now rendered as <IMG />.
      Thanks to Ian Malpass.
    * All values in tags are now double-quoted.

    [DOCUMENTATION]
    * Updated docs from Terrence Brannon.


2005-11-09   Andy Lester

   Release 3.19_01 -- No new functionality.  New tests, though!
   Thanks to the Chicago Perl Mongers for their work.

2003-09-15   Sean M. Burke <sburke@cpan.org>

   Release 3.18 -- bugfix to test, adding qr// to look_(down|up)

   Accepting Iain 'Spoon' Truskett's neat patch for qr// as lookdown
   operators (previously you had to do sub { $_[0]=~ m/.../}).

   Rewrote some tests, notably parsefile.t, which was pointlessly